4-02-2018 #1. Fix: Total - paid = remain with .## precision